добавление проекта all

--- a/Projects/RandomNumber/index.html
+++ b/Projects/RandomNumber/index.html
@@ -8,29 +8,15 @@
         <title>Угадайте число</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="js/my.js"></script>
-        <link rel="stylesheet" href="css/style.css">
     </head>
     <body bgcolor="#FFDCDC">
-        <div class="guessNumber">
-            <h2>Угадайте число</h2>
-            <p>Введите число, которое вы считаете верным</p>
-            <div class="form">
-                <form name="form0">
-                    <h3>Ввести кастомные значения</h3>
-                    Введите минимальное число
-                    <input class="text" type="text" size="10" name="min"><hr>
-                    Введите максимальное число
-                    <input class="text" type="text" size="10" name="max"><hr>
-                    <input type="button" value="Внести в базу данных" onclick="letTest(form0)"><br>
-                </form>
-            </div>
-            <form name="form1">
-                <input type="text" size="10" name="num1"><br>
-                <!--тут не нужны стили пока что--> 
-                <input type="button" value="Угадать" onclick="func(form1)">
-            </form>
-            <div id="chislo">
-            </div>
+        <h4>Угадайте число</h4>
+        Введите число, которое вы считаете верным
+        <form name="form1">
+            <input type="text" size="10" name="num1"><br>
+            <input type="button" value="Угадать" onclick="guess(form1)">
+        </form>
+        <div id="chislo">
         </div>
     </body>
 </html>
