--- a/Projects/vremenaGoda/index.html
+++ b/Projects/vremenaGoda/index.html
@@ -7,11 +7,11 @@
         <script src="js/jquery.js"></script>
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body bgcolor="#FFDCDC">
+    <body>
         <div class="daynight">
             <h2>Время года</h2>
-            <div id="time">
-                <p></p>
+            <div class="data">
+                <div id="time"></div>
             </div>
         </div>
         <script src="js/my.js"></script>
